--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
         let autoUpdateInterval;
         
         // GitHub 저장소 정보 (이 부분을 수정하세요!)
-        const GITHUB_USER = 'YOUR_GITHUB_USERNAME';  // 여기에 GitHub 아이디 입력
+        const GITHUB_USER = 'jina-esfp';  // 여기에 GitHub 아이디 입력
         const GITHUB_REPO = 'clan-match';            // 저장소 이름
         
         // 데이터 URL
